Added Team and Model CRUD operation Migration and association WIP
